--- a/Summary.tex
+++ b/Summary.tex
@@ -25,19 +25,19 @@ Albert T. Cheung, Lourdes Al Ghofaily, Robert C. Gorman, \\Nimesh D. Desai, Jose
 \includegraphics[width = 0.25\linewidth]{UPennLogo}~~~~~\includegraphics[width = 0.25\linewidth]{ITKSnapLogo}~~~~~\includegraphics[width = 0.25\linewidth]{GlaLogo}~~~~~\includegraphics[width = 0.1\linewidth]{GCEC}
 \end{figure}
 \newpage
-\subsection*{Visualisation of .vtp/.vtk files}
-For each frame submitted, there are now .vtp/.vtk files. These are the medial meshes of the submitted case with the applied labels and new biomechanical values that have been calculated. This data is best viewed in the free software, \href{https://www.paraview.org}{paraview}. 
-
-The data now included are either specific to the points, to the cells, or are global data that are uniform over the whole field.
-
 \subsection*{Data Summary}
+For each frame, there are now .vtp/.vtk files. These are the medial meshes of the submitted case with the applied labels and new biomechanical values that have been calculated. 
+
+The data included are either specific to the points, to the cells, or are global data that are uniform over the whole field.
+\\
 ~
-\begin{tabular}{|c|c|l|}
+\\
+\begin{tabular}{|c|c|p{9.4cm}|}
 	\hline
 \textbf{Name}	& \textbf{Type} & \textbf{Description}   \\
 	\hline
 	\hline
-	\multicolumn{3}{|c|}{\textbf{Root Anatomy}} \\
+	\multicolumn{3}{|c|}{\textbf{Anatomy}} \\
 	\hline
 STJ	& Scalar  & Marks the sinotubular junction with value 1 and 0 elsewhere.  \\
 	\hline
@@ -48,7 +48,7 @@ IAS	&Scalar &Marks the interatrial septum with value 1 and 0 elsewhere. \\
 Label	& Scalar & ???\\
 \hline
 \hline
-\multicolumn{3}{|c|}{\textbf{Point Root Properties}} \\
+\multicolumn{3}{|c|}{\textbf{Point Properties}} \\
 	\hline
 Curv$\_$Gaussian	& Scalar& The gaussian curvature.\\
 \hline
@@ -56,67 +56,97 @@ Curv$\_$Mean	& Scalar& The mean curvature.\\
 	\hline
 J$\_$Pt	& Scalar& The jacobian.\\
 	\hline
-I1$\_$Pt& Scalar & The principle strain. \\
+I1$\_$Pt& Scalar & The first invariant of Cauchy-Green deformation tensor. \\
 	\hline
-Motion	& Scalar& The motion of each point between the time frames.\\
+Motion	& Scalar& The magnitude of the displacement of each point between the time frames, relative to the chosen reference frame, where the motion at all the nodes is 0.\\
 	\hline
-Total$\_$Motion	& Scalar& The cumulative motion. \\
+Total$\_$Motion	& Scalar& The cumulative magnitude of displacement of each point between the time frames, relative to the chosen reference frame, where the motion at all the nodes is 0, and frames before the reference frame follow on from the final frame (due to the cyclic nature of the data).\\
 	\hline
-Radius	&Scalar & The distance from the wall centre to the wall edge.\\
+Radius	&Scalar & The radius of the maximally inscribed ball/sphere centred at medial surface.\\
 \hline
 Thickness	&Scalar & The wall thickness.\\
 	\hline
-Circ$\_$Strain$\_$Pt	& Scalar & The circumferential strain.\\
+Circ$\_$Strain$\_$Pt	& Scalar & Stretch along the circumferential direction with respect to the reference time frame.\\
 \hline
-Long$\_$Strain$\_$Pt	& Scalar & The longitudinal strain.\\
+Long$\_$Strain$\_$Pt	& Scalar & Stretch along the longitudinal direction with respect to the reference time frame.\\
 	\hline
-Circumferential$\_$Pt	& Vector &The circumferential vector. \\
+Circumferential$\_$Pt	& Vector & A unit vector along the circumferential direction. \\
 	\hline
-Longitudinal$\_$Pt	&Vector & The longitudinal vector.\\
+Longitudinal$\_$Pt	&Vector & A unit vector along the longitudinal direction.\\
 	\hline
-Normal$\_$Pt	&Vector & The normal vector.\\
+Normal$\_$Pt	&Vector & A unit vector along the normal direction.\\
+\hline
+Displacement$\_$Total & Vector & The total displacement, relative to the reference frame. \\
 	\hline
-Displacement$\_$Wall & Vector & The displacement of the root wall, relative to the root centre. \\
+Displacement$\_$Wall & Vector & The displacement relative to the root's centre \newline (i.e. Displacement\_Total - Displacement\_Root). \\
 	\hline
-Displacement$\_$Root  &  Vector& The displacement of root, without the wall movement. \\
+Displacement$\_$Root  &  Vector& The displacement relative to the root's centre \newline (i.e. Displacement\_Total - Displacement\_Wall).\\
 	\hline
-Displacement$\_$Total & Vector & The displacement, with both the wall and root displacements. \\
+Displacement$\_$Total & Vector & The total displacement, relative to the reference frame. \\
 \hline
 \hline
-\multicolumn{3}{|c|}{\textbf{Cell Root Properties}} \\
+\multicolumn{3}{|c|}{\textbf{Cell Properties}} \\
 \hline
 J$\_$Cell	& Scalar& The jacobian.\\
 \hline
-I1$\_$Cell& Scalar & The principle strain. \\
+I1$\_$Cell& Scalar & The first invariant of Cauchy-Green deformation tensor. \\
 \hline
-Circ$\_$Strain$\_$Cell & Scalar & The circumferential strain.\\
+Circ$\_$Strain$\_$Cell & Scalar & Stretch along the circumferential direction with respect to the reference time frame.\\
 \hline
-Long$\_$Strain$\_$Cell & Scalar & The longitudinal strain. \\
+Long$\_$Strain$\_$Cell & Scalar & Stretch along the longitudinal direction with respect to the reference time frame. \\
 	\hline
-Circumferential$\_$Cell	&  Vector  & The circumferential vector.\\
+Circumferential$\_$Cell	&  Vector  & A unit vector along the circumferential direction.\\
 	\hline
-Longitudinal$\_$Cell 	&  Vector & The longitudinal vector.\\
+Longitudinal$\_$Cell 	&  Vector & A unit vector along the longitudinal direction.\\
 	\hline
-Normal$\_$Cell 	&  Vector & The normal vector.\\
+Normal$\_$Cell 	&  Vector & A unit vector along the normal direction.\\
 \hline
 \hline
 \multicolumn{3}{|c|}{\textbf{Global  Properties}} \\
 \hline
-Wall$\_$Area	&Scalar &The total wall area of the frame. \\
+Wall$\_$Area	&Scalar &The total surface area of the medial mesh. \\
 	\hline
-	Wall$\_$Volume	&Scalar &The total wall volume of the frame. \\
+	Wall$\_$Volume	&Scalar &The total volume of the root tissue. \\
 	\hline
-	Lumen$\_$Volume	&Scalar &The total lumen volume of the frame. \\	
+	Lumen$\_$Volume	&Scalar &The total lumen volume. \\	
 	\hline
-Valve$\_$Position	&Scalar & The valve is open when value is 1 or closed when value is 0.\\
+Valve$\_$Position	&Scalar & A value of 1 indicates open aortic valve while a value of 0 indicates closed aortic valve.\\
 	\hline
 \end{tabular}
-\\
-\subsubsection*{Visualisation}
-The exported .vtp files can be loaded in \href{https://www.paraview.org}{paraview}, where the frames can be cycled through. The movements of the root have been separated so that the wall movement, without the movement of the whole root, and the root movement, without the wall movement, can be viewed separately. The default has the movement fixed to the position of the reference frame. To view the movements, apply the `Warp By Vector' filter and chose the relevant displacement vector, with `Scalar Factor' set to 1. The vectors can be visualised with the filter `Glyphs'.
+
+\subsection*{Visualisation}
+The exported .vtp files can be loaded in \href{https://www.paraview.org}{paraview}, where the frames can be cycled through. The movements of the root have been separated so that the wall movement, (i.e. without the movement of the whole root), and the root movement, (i.e. without the wall movement), can be viewed separately, as well as the total movement of the mesh. To view the movements, apply the `Warp By Vector' filter and chose the relevant displacement vector, with `Scalar Factor' set to 1. The vectors can be visualised with the filter `Glyphs'. Before the movement is applied to the medial mesh, the position of the mesh is in the position of the chosen reference frame, thus at the reference frame the Motion value at the nodes is equal to 0 and the respective displacement vectors are zero-vectors.
 
 %\subsubsection*{CSV data files}
 %Also included are two .csv files which contain average values and field values for each time frame. There is a raw data set, in which the time points are determined by the original frames submitted and the time between each. The second set has the the time standardised, so that different data sets can be more readily compared. It should be noted that, for the standardised time, it has been assumed that the cycle starts before when the valve opens and that the ratio of the valve being open to it being closed is 1:2.
+
+\subsection*{Global Result Figures}
+Below are plots of the global values. Namely, the wall area, the wall volume and the lumen volume. In the first two figures, the data is normalised relative to the reference frame. Please note the distinctions between the `original' and `standardised' time data. Where the `original' data is the submitted time data and for the `standardised' it has been assumed that the cycle starts before when the valve opens and that the ratio of the valve being open to it being closed is 1:2. Thus the data has been interpolated over 1000ms and reordered so that at t=0ms is the reference time, then the frames between the open valve and closed valve frames have been interpolated in the first third and the rest has been interpolated into the final two thirds. This has been done to better compare between multiple cases which may have different time profiles. Also note that the data is cyclical and thus the first and final points are equivalent. 
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=0.75\textwidth]{NormalisedDataOriginalTime.png}
+	\caption{Wall area, wall volume and lumen volume ratio, with original time data.}
+\end{figure}
+
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=0.75\textwidth]{NormalisedDataStandardisedTime.png}
+	\caption{Wall area, wall volume and lumen volume ratio, with standardised time data.}
+\end{figure}
+
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=\textwidth]{RawDataOriginalTime.png}
+	\caption{Raw data of wall area, wall volume and lumen volumes, with original time data.}
+\end{figure}
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=\textwidth]{RawDataStandardisedTime.png}
+	\caption{Raw data of wall area, wall volume and lumen volume ratio, with standardised time data.}
+\end{figure}
 
 
 
