Further update to Summary.tex descriptions

--- a/Summary.tex
+++ b/Summary.tex
@@ -85,7 +85,7 @@ Displacement$\_$Total & Vector & The total displacement, relative to the referen
 \hline
 \multicolumn{3}{|c|}{\textbf{Cell Properties}} \\
 \hline
-J$\_$Cell	& Scalar& The jacobian.\\
+J$\_$Cell	& Scalar& The area jacobian, with respect to the reference frame.\\
 \hline
 I1$\_$Cell& Scalar & The first invariant of Cauchy-Green deformation tensor. \\
 \hline
