Changed the summary document to reflect the change in coordinates to current coordinates (previous commit)

--- a/Summary.tex
+++ b/Summary.tex
@@ -110,7 +110,7 @@ Valve$\_$Position	&Scalar & A value of 1 indicates open aortic valve while a val
 \end{tabular}
 
 \subsection*{Visualisation}
-The exported .vtp files can be loaded in \href{https://www.paraview.org}{paraview}, where the frames can be cycled through. The movements of the root have been separated so that the wall movement, (i.e. without the movement of the whole root), and the root movement, (i.e. without the wall movement), can be viewed separately, as well as the total movement of the mesh. To view the movements, apply the `Warp By Vector' filter and chose the relevant displacement vector, with `Scalar Factor' set to 1. The vectors can be visualised with the filter `Glyphs'. Before the movement is applied to the medial mesh, the position of the mesh is in the position of the chosen reference frame, thus at the reference frame the Motion value at the nodes is equal to 0 and the respective displacement vectors are zero-vectors.
+The exported .vtp files can be loaded in \href{https://www.paraview.org}{paraview}, where the frames can be cycled through. By default, the current coordinates are used. The movement of the root with respect to its mechanical reference configuration has been separated so that the wall movement, (i.e. without the rigid body motion of the whole root), and the root movement, (i.e. the rigid body motion), can be viewed separately, as well as the total movement of the mesh. To view the separated movements, first apply the `Warp By Vector' filter with the Displacement\_Total field with a scale of -1 (so as to remove the displacements). This would give the reference coordinates at all times (i.e., no motion). Next, one can apply the same filter again with the desired displacement vector, with the `Scalar Factor' set to 1. The vectors can be visualised with the filter `Glyphs'. Before the movement is applied to the medial mesh, the position of the mesh is in the position of the chosen reference frame, thus at the reference frame the Motion value at the nodes is equal to 0 and the respective displacement vectors are zero-vectors.
 
 %\subsubsection*{CSV data files}
 %Also included are two .csv files which contain average values and field values for each time frame. There is a raw data set, in which the time points are determined by the original frames submitted and the time between each. The second set has the the time standardised, so that different data sets can be more readily compared. It should be noted that, for the standardised time, it has been assumed that the cycle starts before when the valve opens and that the ratio of the valve being open to it being closed is 1:2.
