Added computation of point-wise radius and radius ratio, and added their description to the Summary doc

--- a/Summary.tex
+++ b/Summary.tex
@@ -55,6 +55,10 @@ J$\_$Pt	& Scalar& The area jacobian, with respect to the reference frame.\\
 	\hline
 I1$\_$Pt& Scalar & The first invariant of Cauchy-Green deformation tensor. \\
 	\hline
+Lumen Radius & Scalar& Radius of each point (defined as the distance from the line connecting centers of STJ and VAJ).\\
+	\hline
+Lumen Radius Ratio & Scalar& Ratio of the lumen ratio at each point relative to the chosen reference frame.\\
+	\hline
 Motion	& Scalar& The magnitude of the displacement of each point between the time frames, relative to the chosen reference frame, where the motion at all the nodes is 0.\\
 	\hline
 Total$\_$Motion	& Scalar& The cumulative magnitude of displacement of each point (i.e. integral over time of the Motion), relative to the chosen reference frame, where the motion at all the nodes is 0, and frames before the reference frame follow on from the final frame (due to the cyclic nature of the data).\\
